--- a/imtihon_7_month/requirements.txt
+++ b/imtihon_7_month/requirements.txt
@@ -6,6 +6,7 @@ Django==5.0
 idna==3.6
 Pillow==10.1.0
 pyTelegramBotAPI==4.14.1
+python-dotenv==1.0.0
 requests==2.31.0
 soupsieve==2.5
 sqlparse==0.4.4
